# docs/swagger.json
@@ -447,7 +447,7 @@
         },
         "/auth/login": {
             "post": {
-                "description": "Masuk ke sistem untuk mendapatkan Token JWT",
+                "description": "Masuk ke sistem untuk mendapatkan Token JWT dan Refresh Token",
                 "consumes": [
                     "application/json"
                 ],
@@ -557,6 +557,43 @@
                 }
             }
         },
+        "/lecturers/{id}/advisees": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Melihat daftar mahasiswa bimbingan dosen tertentu",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Students \u0026 Lecturers"
+                ],
+                "summary": "Get Lecturer Advisees",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Lecturer Table ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.StudentResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/reports/statistics": {
             "get": {
                 "security": [
@@ -639,6 +676,78 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.StudentResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/students/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Melihat detail mahasiswa (Profil Akademik)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Students \u0026 Lecturers"
+                ],
+                "summary": "Get Student Detail",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Student Table ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/students/{id}/achievements": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Melihat list prestasi berdasarkan ID Mahasiswa (Tabel Students)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Students \u0026 Lecturers"
+                ],
+                "summary": "Get Student Achievements (Public/Admin)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Student Table ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AchievementReference"
                             }
                         }
                     }
@@ -1161,7 +1270,6 @@
             ],
             "properties": {
                 "advisor_id": {
-                    "description": "ID tabel Lecturers",
                     "type": "string"
                 }
             }
@@ -1204,7 +1312,7 @@
                     "type": "string"
                 },
                 "lecturer_id": {
-                    "description": "Data khusus tabel lecturers",
+                    "description": "NIP",
                     "type": "string"
                 },
                 "password": {
@@ -1220,6 +1328,7 @@
             "type": "object",
             "required": [
                 "academic_year",
+                "advisor_id",
                 "email",
                 "full_name",
                 "password",
@@ -1232,7 +1341,7 @@
                     "type": "string"
                 },
                 "advisor_id": {
-                    "description": "AdvisorID adalah ID dari Dosen Wali (UUID dari tabel lecturers)",
+                    "description": "UUID Dosen Wali",
                     "type": "string"
                 },
                 "email": {
@@ -1249,7 +1358,7 @@
                     "type": "string"
                 },
                 "student_id": {
-                    "description": "Data khusus tabel students",
+                    "description": "NIM",
                     "type": "string"
                 },
                 "username": {
@@ -1264,15 +1373,15 @@
                     "type": "string"
                 },
                 "full_name": {
-                    "description": "Dari tabel Users",
+                    "description": "Nama User",
                     "type": "string"
                 },
                 "id": {
-                    "description": "ID tabel Lecturers (UUID)",
+                    "description": "ID Tabel Lecturers",
                     "type": "string"
                 },
                 "lecturer_id": {
-                    "description": "Dari tabel Lecturers",
+                    "description": "NIP",
                     "type": "string"
                 }
             }
@@ -1349,19 +1458,24 @@
                     "description": "Nama Dosen Wali",
                     "type": "string"
                 },
+                "email": {
+                    "description": "Email User",
+                    "type": "string"
+                },
                 "full_name": {
-                    "description": "Dari tabel Users",
+                    "description": "Nama User",
                     "type": "string"
                 },
                 "id": {
-                    "description": "ID tabel Students (UUID)",
+                    "description": "ID Tabel Students",
                     "type": "string"
                 },
                 "program_study": {
+                    "description": "Prodi",
                     "type": "string"
                 },
                 "student_id": {
-                    "description": "Dari tabel Students",
+                    "description": "NIM",
                     "type": "string"
                 }
             }
@@ -1388,7 +1502,7 @@
                     "type": "string"
                 },
                 "role_name": {
-                    "description": "Relasi (Optional, diisi jika join)",
+                    "description": "Field Relasi (Optional)",
                     "type": "string"
                 },
                 "updated_at": {
